service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  selector:
    app: devops-app
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30036
